formerly used for that purpose is now an alias for locale-coding-system.

** Functions y-or-n-p, read-char, read-key-sequence and the like, that
display a prompt but don't use the minibuffer, now display the prompt
using the text properties (esp. the face) of the prompt string.

** New function x-send-client-message sends a client message when
running under X.

** New packages:

*** The new package gdb-ui.el provides an enhanced graphical interface to
GDB. You can interact with GDB through the GUD buffer in the usual way, but
there are also further buffers which control the execution and describe the
state of your program.  It separates the input/output of your program from
that of GDB and watches expressions in the speedbar.  It also uses features of
Emacs 21 such as the display margin for breakpoints, and the toolbar.

Use M-x gdba to start GDB-UI.

*** The new package syntax.el provides an efficient way to find the
current syntactic context (as returned by parse-partial-sexp).

*** The new package bindat.el provides functions to unpack and pack
binary data structures, such as network packets, to and from Lisp
data structures.

*** The TCL package tcl-mode.el was replaced by tcl.el.
This was actually done in Emacs-21.1, and was not documented.

*** The new package button.el implements simple and fast `clickable buttons'
in emacs buffers.  `buttons' are much lighter-weight than the `widgets'
implemented by widget.el, and can be used by lisp code that doesn't
require the full power of widgets.  Emacs uses buttons for such things
as help and apropos buffers.


* Installation changes in Emacs 21.3

** Support for GNU/Linux on little-endian MIPS and on IBM S390 has
been added.


* Changes in Emacs 21.3

** The obsolete C mode (c-mode.el) has been removed to avoid problems
with Custom.

** UTF-16 coding systems are available, encoding the same characters
as mule-utf-8.  Coding system `utf-16-le-dos' is useful as the value